--- a/package.json
+++ b/package.json
@@ -43,5 +43,11 @@
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2"
+  },
+  "lint-staged": {
+    "*.{*ts,*js,tsx,jsx,md,mdx,css}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
