--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@siberiacancode/reactuse": "^0.2.32",
     "@tailwindcss/typography": "^0.5.16",
