--- a/package.json
+++ b/package.json
@@ -17,20 +17,24 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@siberiacancode/reactuse": "^0.2.32",
-    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/typography": "^0.5.18",
     "@vercel/og": "^0.8.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jsdom": "^27.0.0",
     "lucide-react": "^0.544.0",
-    "motion": "^12.23.13",
+    "motion": "^12.23.16",
     "next": "15.5.3",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
+    "rehype-parse": "^9.0.1",
+    "rehype-remark": "^10.0.1",
+    "remark-stringify": "^11.0.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.9"
+    "unified": "^11.0.5",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@siberiacancode/eslint": "^2.12.0",
