--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@siberiacancode/reactuse": "^0.2.32",
@@ -25,11 +26,12 @@
     "lucide-react": "^0.544.0",
     "motion": "^12.23.16",
     "next": "15.5.3",
+    "prisma": "^6.16.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-markdown": "^10.1.0",
-    "rehype-raw": "^7.0.0",
     "rehype-parse": "^9.0.1",
+    "rehype-raw": "^7.0.0",
     "rehype-remark": "^10.0.1",
     "remark-stringify": "^11.0.0",
     "tailwind-merge": "^3.3.1",
