--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   postgres:
@@ -10,7 +10,7 @@ services:
       POSTGRES_USER: confreviewer
       POSTGRES_PASSWORD: confreviewer_password
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - data:/var/lib/postgresql/data
 
