--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "prisma generate && next dev --turbopack",
+    "build": "prisma generate && prisma db push && next build --turbopack",
     "start": "next start",
     "lint": "eslint . --fix",
     "lint-inspector": "npx @eslint/config-inspector@latest",
