--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
-    "@siberiacancode/reactuse": "^0.2.32",
+    "@siberiacancode/fetches": "^1.11.0",
+    "@siberiacancode/reactuse": "^0.2.34",
     "@tailwindcss/typography": "^0.5.18",
     "@vercel/analytics": "^1.5.0",
     "@vercel/og": "^0.8.5",
