--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "prisma generate && next dev --turbopack",
     "build": "prisma generate && prisma db push && next build --turbopack",
-    "start": "next start",
+    "start": "next start -p 3000",
     "lint": "eslint . --fix",
     "lint-inspector": "npx @eslint/config-inspector@latest",
     "format": "prettier --write .",
