--- a/package.json
+++ b/package.json
@@ -17,17 +17,19 @@
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
+    "@scalar/api-reference-react": "^0.7.53",
     "@siberiacancode/fetches": "^1.11.0",
-    "@siberiacancode/reactuse": "^0.2.34",
-    "@tailwindcss/typography": "^0.5.18",
+    "@siberiacancode/reactuse": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.19",
     "@vercel/analytics": "^1.5.0",
     "@vercel/og": "^0.8.5",
+    "ajv": "^8.17.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jsdom": "^27.0.0",
     "lucide-react": "^0.544.0",
-    "motion": "^12.23.16",
-    "next": "15.5.3",
+    "motion": "^12.23.22",
+    "next": "15.5.4",
     "prisma": "^6.16.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
@@ -43,13 +45,14 @@
     "@siberiacancode/eslint": "^2.12.0",
     "@siberiacancode/prettier": "^1.4.0",
     "@tailwindcss/postcss": "^4.1.13",
-    "@types/jsdom": "21.1.7",
+    "@types/jsdom": "27.0.0",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "next-openapi-gen": "^0.7.9",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.13",
-    "tw-animate-css": "^1.3.8",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.2"
   },
   "lint-staged": {
