--- a/package.json
+++ b/package.json
@@ -15,14 +15,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@lexical/code": "^0.39.0",
-    "@lexical/link": "^0.39.0",
-    "@lexical/list": "^0.39.0",
-    "@lexical/react": "^0.39.0",
-    "@lexical/rich-text": "^0.39.0",
-    "@lexical/selection": "^0.39.0",
-    "@lexical/table": "^0.39.0",
-    "@lexical/utils": "^0.39.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -42,20 +34,28 @@
     "@siberiacancode/fetches": "^1.13.2",
     "@siberiacancode/reactuse": "^0.3.5",
     "@tailwindcss/typography": "^0.5.19",
+    "@tiptap/extension-document": "^3.15.3",
+    "@tiptap/extension-list": "^3.15.3",
+    "@tiptap/extension-paragraph": "^3.15.3",
+    "@tiptap/extension-subscript": "^3.15.3",
+    "@tiptap/extension-superscript": "^3.15.3",
+    "@tiptap/extension-text": "^3.15.3",
+    "@tiptap/extension-typography": "^3.15.3",
+    "@tiptap/extensions": "^3.15.3",
+    "@tiptap/markdown": "^3.15.3",
+    "@tiptap/pm": "^3.15.3",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
     "@vercel/analytics": "^1.6.1",
     "@vercel/og": "^0.8.6",
-    "ajv": "^8.17.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
-    "iron-session": "^8.0.4",
     "jsdom": "26.1.0",
-    "lexical": "^0.39.0",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
-    "pg": "^8.16.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
@@ -75,7 +75,6 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@types/jsdom": "27.0.0",
     "@types/node": "^25.0.3",
-    "@types/pg": "^8.16.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "prettier-plugin-tailwindcss": "^0.7.2",
