--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
@@ -32,7 +33,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@scalar/api-reference-react": "^0.8.15",
     "@siberiacancode/fetches": "^1.13.2",
-    "@siberiacancode/reactuse": "^0.3.5",
+    "@siberiacancode/reactuse": "^0.3.6",
     "@tailwindcss/typography": "^0.5.19",
     "@tiptap/extension-document": "^3.15.3",
     "@tiptap/extension-list": "^3.15.3",
@@ -59,6 +60,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
+    "react-intl": "^8.0.11",
     "react-markdown": "^10.1.0",
     "rehype-parse": "^9.0.1",
     "rehype-remark": "^10.0.1",
